<resources>
    <string name="app_name">Sample Application</string>
    <string name="module_animation">1-Module Animation</string>
    <string name="module_game">2-Module Gaming</string>
    <string name="module_video">3-Module Video Player</string>
    <string name="module_audio">4-Module Audio Control</string>
    <string name="module_list_view">5-Module List View</string>
    <string name="module_timer">6-Module Timer App</string>
    <string name="module_brain_train">7-Module Brain Train</string>
    <string name="module_weather_app">8-Module Weather App</string>
    <string name="module_maps">9-Module Maps</string>
    <string name="module_location">10-Module Location</string>
    <string name="play_again">Play again!</string>
    <string name="end_game">END OF GAME!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="title_activity_maps">Map</string>
</resources>
