<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/animation_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="LoadModule"
                android:tag="MODULE_1"
                android:text="@string/module_animation" />

            <Button
                android:id="@+id/game_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="LoadModule"
                android:tag="MODULE_2"
                android:text="@string/module_game" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/video_player_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="LoadModule"
                android:tag="MODULE_3"
                android:text="@string/module_video" />

            <Button
                android:id="@+id/audio_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="LoadModule"
                android:tag="MODULE_4"
                android:text="@string/module_audio" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/list_view_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="LoadModule"
                android:tag="MODULE_5"
                android:text="@string/module_list_view" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>